--- a/beetle/dev/kustomization.yaml
+++ b/beetle/dev/kustomization.yaml
@@ -1,11 +1,11 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-resources:
-  - ../base
-
 configMapGenerator:
-  - name: beetle-config
-    behavior: merge
+  - name: dev-beetle-config
     files:
-      - dev-config.yaml=config.yaml
+      - global-config.yaml=../../global-config.yaml
+      - service-config.yaml=service-config.yaml
+
+options:
+  disableNameSuffixHash: true
