--- a/services/beetle/dev/service-config.yaml
+++ b/services/beetle/dev/service-config.yaml
@@ -6,16 +6,16 @@ postgres:
   synchronizer:
     acquireRetrySleep: 2 seconds
     ttl: 5 minutes
-  url: PLAYQ_ENV_POSTGRES_URL
+  url: url
   user: beetle
 
 redis:
   authMode: AWS_IAM
   awsRegion: us-east-1
-  awsReplicationGroupId: PLAYQ_SECRET_BEETLE_REDIS_USER_ID
-  awsUserId: PLAYQ_SECRET_BEETLE_REDIS_USER_ID
-  endpoint: PLAYQ_ENV_BEETLE_REDIS_ENDPOINT
+  awsReplicationGroupId: groupId
+  awsUserId: beetle
+  endpoint: redisendpoint
   integrationCheck: true
   password: PLAYQ_SECRET_REDIS_PASSWORD
   serverMode: CLUSTER
-  user: PLAYQ_SECRET_BEETLE_REDIS_USERNAME
+  user: redisuser
