--- a/services/beetle/base/kustomization.yaml
+++ b/services/beetle/base/kustomization.yaml
@@ -5,8 +5,5 @@ kind: Kustomization
 
 namespace: default
 
-configMapGenerator:
-  - name: beetle-config
-
-generatorOptions:
-  disableNameSuffixHash: true
+resources:
+  - ../../runtime
